--- a/serverless.yml
+++ b/serverless.yml
@@ -1,46 +1,3 @@
-# service: s3-file-uploader #name of service
-
-# provider:
-#   name: aws
-#   runtime: nodejs12.x
-#   stage: dev
-#   region: us-east-2
-
-# custom:
-#   fileUploadBucketName: ${self:service}-bucket-${self:provider.stage} #s3-file-uploader-bucket-dev
-
-# resources:
-#   Resources:
-#     FileBucket:
-#       Type: AWS::S3::Bucket
-#       Properties:
-#         BucketName: ${self:custom.fileUploadBucketName}
-#         AccessControl: PublicRead #define objects in s3 buckets are publicly visible
-
-# plugins:
-#   - serverless-iam-roles-per-function
-#usage => to write the iam roles per function, usually it can't be write per function
-#it needs to define the iam roles under provider
-
-#lambda function
-# functions:
-#   s3FileUploader:
-#     handler: src/handler.uploadFileToBucket
-#     name: s3-file-uploader #actual function name
-#     timeout: 60 #seconds
-#     memorySize: 128 #mb
-#     events: #event trigger to trigger the lambda function
-#       - http:
-#           path: files #path of end point
-#           method: POST #end point type
-#     iamRoleStatements: #adding granular level permission
-#       - Effect: Allow #allowing lambda function to put images into s3 bucket
-#         Action:
-#           - 's3:Put*' #resource:operation => syntax | * => allow any operation starting with Put  | only can upload objects cant delete update
-#         Resource: arn:aws:s3:::${self:custom.fileUploadBucketName}/* #defining our s3 bucket | * => put files into any folders or nested directories inside the bucket
-#     environment:
-#       FILE_UPLOAD_BUCKET_NAME: ${self:custom.fileUploadBucketName} #general convention
-
 service: upload-file-aws-s3bucket
 
 provider:
@@ -57,6 +14,7 @@ provider:
 custom:
   fileUploadBucketName: ${self:service}-${self:provider.stage}-bucket
   tableName: CsvToDynamoDB
+  writeToFileBucketName: ${self:provider.stage}-write-to-file-bucket
 
 plugins:
   - serverless-iam-roles-per-function
@@ -108,12 +66,27 @@ functions:
     environment:
       TABLE_NAME: ${self:custom.tableName}
 
+  writeDynamoDbDataToFile:
+    handler: src/handler.writeDynamoDbDataToFile
+    events:
+      - httpApi:
+          method: get
+          path: /writeToFile
+    environment:
+      TABLE_NAME: ${self:custom.tableName}
+      BUCKET_NAME: ${self:custom.writeToFileBucketName}
+
 resources:
   Resources:
     FileBucket:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.fileUploadBucketName}
+        AccessControl: PublicRead
+    WriteFileBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.writeToFileBucketName}
         AccessControl: PublicRead
     CsvToDynamoDB:
       Type: AWS::DynamoDB::Table
